--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.6.3",
-    "react-router-dom": "^5.1.2",
-    "react-scroll-parallax": "^2.3.2"
+    "react-router-dom": "^5.1.2"
   }
 }
