--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "Karate One",
   "main": "index.js",
   "scripts": {
+    "build:win": "NODE_ENV=prod && ts-node webpack.config.ts",    
     "build": "./node_modules/.bin/webpack --progress --color --display-error-details --mode production",
     "build:dev": "./node_modules/.bin/webpack --progress --color --display-error-details --mode development",
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "serve:win": "set ENV=prod node && node ./dist/server.bundle.js",
+    "serve": "set ENV=prod&& ts-node server.production.tsx",
+    "servejs": "ENV=prod node ./dist/server.bundle.js",
+    "start": "node app.js",
+    "express:dev:win" :"./node_modules/.bin/ts-node server.production.tsx",
+    "start:dev": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
     "@svgr/webpack": "^5.3.0",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.6",
     "@types/leaflet": "^1.5.12",
+    "@types/node": "^13.11.1",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-router-dom": "^5.1.3",
+    "@types/webpack": "^4.41.10",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
@@ -26,6 +36,7 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.2",
+    "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
@@ -35,6 +46,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/lab": "^4.0.0-alpha.47",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
