Minor Update to Package Scripts to support Azure DevOps

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build:win": "NODE_ENV=prod && ts-node webpack.config.ts",    
     "build": "./node_modules/.bin/webpack --progress --color --display-error-details --mode production",
     "build:dev": "./node_modules/.bin/webpack --progress --color --display-error-details --mode development",
-    "serve:win": "set ENV=prod node && node ./dist/server.bundle.js",
-    "serve": "set ENV=prod&& ts-node server.production.tsx",
-    "servejs": "ENV=prod node ./dist/server.bundle.js",
-    "start": "node app.js",
+    "serve:win": "set ENV=prod&& ts-node server.production.tsx",
+    "serve": "ENV=prod ts-node server.production.tsx",
+    "servejs": "ENV=prod node ./dist/server.bundle.js",  
+    "start": "ENV=prod ts-node server.production.tsx",  
     "express:dev:win" :"./node_modules/.bin/ts-node server.production.tsx",
     "start:dev": "./node_modules/.bin/webpack-dev-server"
   },
