Updated Express components to support typescript

--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Karate One",
   "main": "index.js",
   "scripts": {
-    "build:win": "NODE_ENV=prod && ts-node webpack.config.ts",    
+    "build:win": "NODE_ENV=prod && ts-node webpack.config.ts",
     "build": "./node_modules/.bin/webpack --progress --color --display-error-details --mode production",
     "build:dev": "./node_modules/.bin/webpack --progress --color --display-error-details --mode development",
     "serve:win": "set ENV=prod&& ts-node server.production.tsx",
-    "serve": "ENV=prod ts-node server.production.tsx",
-    "servejs": "ENV=prod node ./dist/server.bundle.js",  
-    "start": "ENV=prod ts-node server.production.tsx",  
-    "express:dev:win" :"./node_modules/.bin/ts-node server.production.tsx",
+    "serve": "ENV=prod node server.production.js",    
+    "start": "ENV=prod node server.production.js",
+    "express:dev:win": "./node_modules/.bin/ts-node server.production.tsx",
     "start:dev": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "",
@@ -29,9 +28,11 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/webpack": "^4.41.10",
     "css-loader": "^3.4.2",
+    "errorhandler": "^1.5.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.4",
+    "rimraf": "^3.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
@@ -41,11 +42,13 @@
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/lab": "^4.0.0-alpha.47",
+    "@types/errorhandler": "^1.5.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "leaflet": "^1.6.0",
